--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,7 +1,7 @@
 ---
 id: index
 slug: /
-title: Resonate Documentation
+title: Resonate documentation
 description: Get started with Resonate by asking Echo or digging into our docs.
 sidebar_label: Home
 sidebar_position: 1
