--- a/docs/evaluate/system-components.mdx
+++ b/docs/evaluate/system-components.mdx
@@ -20,7 +20,7 @@ Resonate offers SDKs for the following langauges:
 
 ### Resonate Server
 
-The Resonate Server is a superivisor service that manages the storage of promises and routes Remote Function Calls (RFCs).
+The Resonate Server is a superivisor service that manages the storage of [Durable Promises](/concepts/durable-promise) and routes Remote Function Calls (RFIs).
 
 [Install the Resonate Server](/get-started/server-installation) and connect your Application Nodes to make promises durable.
 
