--- a/docs/evaluate/features/execution-retries.mdx
+++ b/docs/evaluate/features/execution-retries.mdx
@@ -11,7 +11,7 @@ tags:
   - features
 ---
 
-When you use Resonate to build applications, every function in the application's call graph benefits from automatic retries should the execution fail or return an error or exception.
+When you use Resonate to build applications, every function in the application's [Call Graph](/concepts/call-graph) benefits from automatic retries should the execution fail or return an error or exception.
 
 You can configure a Retry Policy at the Application Node level or per function.
 
@@ -21,3 +21,5 @@ Check out examples for the following SDKs:
 - [Set a custom Retry Policy in TypeScript](/develop/typescript#set-a-retry-policy)
 
 See [Resonate Retry Policies](/concepts/failure-detection-and-recovery#retry-policies) for a deep dive into the built-in Retry Policies and their behavior.
+
+See [Call Graph recovery](/evaluate/features/recovery) to learn how Resonate can recover from failures at the platform level (after a process crash).
